# oxfam

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRD.md  README.md  Tech Team_Climate Risk_Calculation.xlsx  Things_To_Do_In_v1.1.md  Things_To_Do_In_v1.2.md  Things_To_Do_In_v1.3.md  Things_To_Do_In_v1.4.md  Things_To_Do_In_v1.5.md  Things_To_Do_In_v1.6.md  Things_To_Do_In_v1.7.md  Things_To_Do_In_v2.0.md  commit_history.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  netlify.toml  robots.txt  sitemap.xml  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py  002_admin_boundaries.py  003_climate_indicators.py  004_units_sources_indicator_values.py  005_indicator_reference.py  006_computed_scores.py  007_scenarios.py  008_soft_delete_audit_logs.py  009_bilingual_columns.py  010_batch_jobs.py  011_performance_indexes.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/: audit.py  auth.py  batch_upload.py  deps.py  exports.py  geo.py  indicators.py  risk_index.py  scores.py  simulation.py  sources.py  units.py  users.py  websocket.py
backend/app/models/: __init__.py  audit_log.py  batch_job.py  boundary.py  computed_score.py  indicator.py  indicator_reference.py  indicator_value.py  scenario.py  source.py  unit.py  user.py
backend/app/schemas/: auth.py  boundary.py  indicator.py  source.py  unit.py  user.py
backend/app/scripts/: import_geojson.py  import_points.py  import_shapefiles.py  seed_indicator_reference.py  seed_indicator_values.py  seed_indicators.py  seed_superadmin.py
backend/app/services/: audit.py  cvi_engine.py
backend/app/tasks/: batch_processing.py
backend/tests/: conftest.py  test_auth.py  test_cvi_engine.py  test_geo.py  test_indicators.py  test_scores.py  test_simulation.py  test_users.py  test_v15_features.py  test_v21_features.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
nginx/: nginx.conf
(+81 files in other folders)
