[tool.poetry]
name = "climate-risk-backend"
version = "0.1.0"
description = "Bangladesh Climate Risk Assessment Platform - Backend API"
authors = ["Tech Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
pydantic-settings = "^2.1.0"
geoalchemy2 = "^0.14.0"
python-multipart = "^0.0.9"
geopandas = "^1.0.0"
shapely = "^2.0.0"
openpyxl = "^3.1.0"
reportlab = "^4.1.0"
fiona = "^1.9.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
